updates p1 for add a product prototype

--- a/app/views/product-case-testing/cases-page.html
+++ b/app/views/product-case-testing/cases-page.html
@@ -31,16 +31,19 @@
                 <p class="govuk-body-s">
                     <span id="search-hint">You can search for a case using the keywords that describe it and by filtering the results.</span> You can also filter all case records without a keyword search.
                 </p>
+
                 <p class="govuk-body-s govuk-!-margin-bottom-1">
                     You can create a new case or add a product to an existing case.
                 </p>
             </div>
         </details>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
-        <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-            Create a case
-        </a>
+    <div class="govuk-grid-column-one-third govuk-!-margin-top-8"><!-- was: find-the-product.html -->
+        <div class="opss-text-align-right">
+            <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Create a case
+            </a>
+        </div>
     </div>
 </div>
 
@@ -123,7 +126,7 @@
                                 Case title
                             </th>
                             <th id="item-01" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Zooplin hair bleach, Hair bleach – chemical hazard</a>
+                                <a href="blank-01.html" class="govuk-link govuk-link--no-visited-state">Zooplin hair bleach, Hair bleach - chemical hazard</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
@@ -152,14 +155,14 @@
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-01" id="actions-01" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-01 actions-01" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2021-1001</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -195,14 +198,14 @@
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-02" id="actions-02" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-02 actions-02" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 20-2120</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -236,14 +239,14 @@
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-03" id="actions-03" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-03 actions-03" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2104-21000</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -277,14 +280,14 @@
                                 <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-04" id="actions-04" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-04 actions-04" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2007-37001</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -318,14 +321,14 @@
                                 <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-05" id="actions-05" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-05 actions-05" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 1007-27002</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -361,14 +364,14 @@
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-06" id="actions-06" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-06 actions-06" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 45001-70000</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -402,14 +405,14 @@
                                 <span class="opss-tag opss-tag--std">Enquiry</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-07" id="actions-07" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-07 actions-07" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 25022-21010</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -447,14 +450,14 @@
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-09" id="actions-09" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-09 actions-09" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 21-23341</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tbody class="govuk-table__body">
@@ -488,14 +491,14 @@
                                 <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
-                        <tr class="govuk-table__row">
+                        <!--tr class="govuk-table__row">
                             <th headers="item-08" id="actions-08" class="govuk-visually-hidden">
                                 Actions
                             </th>
                             <td headers="item-08 actions-08" colspan="3" class="govuk-table__cell">
                                 <a href="add-a-product-to-a-case" class="govuk-link govuk-link--no-visited-state">Add a product <span class="govuk-visually-hidden">to case 2221-70003</span></a>
                             </td>
-                        </tr>
+                        </tr-->
                     </tbody>
 
                     <tfoot class="govuk-table__head">
