--- a/app/views/product-case-testing/do-you-have-the-barcode.html
+++ b/app/views/product-case-testing/do-you-have-the-barcode.html
@@ -45,7 +45,7 @@
 
         <input id="checkMatch" name="checkMatch" type="hidden" value="no">
 
-        <span class="govuk-caption-l">Add a product</span>
+        <!--span class="govuk-caption-l">Create a product record</span-->
 
 
 
