--- a/app/views/product-case-testing/might-already-exist-bc.html
+++ b/app/views/product-case-testing/might-already-exist-bc.html
@@ -41,7 +41,7 @@
         </h1>
 
         <div class="govuk-hint" id="isit-hint">
-            The product you are adding might already exist in our records? <span class="govuk-visually-hidden">Compare it to the product you are adding.</span>
+            The product you are creating a product record for might already exist in our records? <span class="govuk-visually-hidden">Here you can compare it to the product you are adding.</span>
         </div>
 
         <section class="govuk-grid-row opss-panels">
@@ -189,7 +189,7 @@
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="isit-2" name="isit" type="radio" value="no">
                             <label class="govuk-label govuk-radios__label" for="isit-2">
-                                No - Continue to add the new product
+                                No - continue to create a new product record
                             </label>
                         </div>
                     </div>
