--- a/app/views/product-case-testing/products-page-new-product.html
+++ b/app/views/product-case-testing/products-page-new-product.html
@@ -16,9 +16,9 @@
     </div>
     <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-            The product has been added
+            The product record has been created
         </h3>
-        <p class="govuk-body">You can now <a href="#item-01" class="govuk-notification-banner__link">create a case for this product</a>.</p>
+        <!--p class="govuk-body">You can now <a href="#item-01" class="govuk-notification-banner__link">create a case for this product</a>.</p-->
     </div>
 </div>
 
