--- a/app/views/product-case-testing/upload-a-product-image.html
+++ b/app/views/product-case-testing/upload-a-product-image.html
@@ -48,10 +48,10 @@
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body-s">
-                            Do not upload case images related to damage or incidents. (Those are evidence images used for adding to a case).
+                            Do not upload case images related to damage or incidents. (Those are evidence images for use with a case).
                         </p>
                         <p class="govuk-body-s">
-                            In addition to general product images try to add images of key details, such as plugs on electrical products or safety informations on packaging.
+                            In addition to general product images try to add images of key details, such as plugs on electrical products or safety information on packaging.
                         </p>
                     </div>
                 </details>
