--- a/app/views/product-case-testing/what-is-the-product-category.html
+++ b/app/views/product-case-testing/what-is-the-product-category.html
@@ -35,8 +35,22 @@
     </div>
   </div>
 
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      <div class="govuk-warning-text">
+        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+        <strong class="govuk-warning-text__text">
+          <span class="govuk-warning-text__assistive">Warning</span>
+          These selections and entries will be permanent and cannot be changed.
+        </strong>
+      </div>
+    </div>
+  </div>
+
+
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+
 
 
         <form action="#" method="post" data-fullproductname="{{ data['fullproductname'] }}" data-name="{{ data['productName'] }}" data-model="{{ data['modelName'] }}"  data-modelno="{{ data['modelnumber'] }}" novalidate>
@@ -53,11 +67,11 @@
 
 
   <div id="category-hint" class="govuk-hint govuk-!-font-size-16">
-    Select a category. <br>(COVID-19 categories <abbr>PPE</abbr> and Hand sanitiser have now been added).
+    Select a category. <!--br>Coronavirus  (COVID-19) categories <abbr>PPE</abbr> and Hand sanitiser have now been added.-->
   </div>
 
 
-  <select class="govuk-select" id="category" name="category" aria-describedby="category-hint">
+<select class="govuk-select" id="category" name="category" aria-describedby="category-hint">
 <option value="" selected></option>
 <option value="Personal protective equipment (PPE)">Personal protective equipment (PPE)</option>
 <option value="Hand sanitiser">Hand sanitiser</option>
@@ -107,7 +121,7 @@
   </label>
 
   <div id="subcategory-hint" class="govuk-hint govuk-!-font-size-16">
-    Enter a descriptive subcategory. For example, Washing machine, Shampoo or Highchair.
+    Enter a descriptive subcategory. For example, Washing machine, Shampoo or Necklace.
   </div>
 
     <span id="subcategory-error" class="govuk-error-message">
