--- a/app/views/product-case-testing/what-is-the-product-name.html
+++ b/app/views/product-case-testing/what-is-the-product-name.html
@@ -54,15 +54,24 @@
           Sometimes the brand and model name can form part of the full product name. For example, the Dyson Small Ball Animal 2, is an upright vaccum cleaner.
         </p>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-8">
+        <p class="govuk-body opss-secondary-text">
           Provide and categorise what information you can.
         </p>
+
+        <div class="govuk-warning-text govuk-!-margin-bottom-8">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            The &lsquo;full product name&rsquo; entry will be permanent and cannot be changed.
+          </strong>
+        </div>        
 
     </div>
   </div>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
       <form action="#" method="post" novalidate>
 
 
@@ -72,7 +81,7 @@
           </label>
 
           <div id="fullproductname-hint" class="govuk-hint govuk-hint govuk-!-font-size-16">
-            For example, Dyson Small Ball Animal 2.
+            For example, Dyson Small Ball Animal 2. 
           </div>
 
           <span id="fullproductname-error" class="govuk-error-message">
