--- a/app/views/product-case-testing/might-already-exist.html
+++ b/app/views/product-case-testing/might-already-exist.html
@@ -35,7 +35,7 @@
         </h1>
 
         <div class="govuk-hint" id="isit-hint">
-            The product you are adding might already exist in our records? <span class="govuk-visually-hidden">Compare it to the product you are adding.</span>
+            The product you are creating a product record for might already exist in our records? <span class="govuk-visually-hidden">Here you can compare it to the product you are adding.</span>
         </div>
 
         <section class="govuk-grid-row opss-panels">
@@ -44,7 +44,7 @@
                     <span class="govuk-caption-m">The product in our records</span>
 
                     <h2 id="productName" class="govuk-heading-m govuk-!-margin-bottom-3" data-id="{{ data['theMatch'] }}">
-                        this is the ID
+                        this is the <abbr>ID</abbr>
                     </h2>
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
@@ -175,7 +175,7 @@
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="isit-2" name="isit" type="radio" value="no">
                             <label class="govuk-label govuk-radios__label" for="isit-2">
-                                No - Continue to add the new product
+                                No - continue to create a new product record
                             </label>
                         </div>
                     </div>
