--- a/app/views/product-case-testing/products-page.html
+++ b/app/views/product-case-testing/products-page.html
@@ -28,15 +28,17 @@
                     <span id="search-hint">You can search for products using keywords from the product name or by using a barcode. A barcode is normally 13 digits, although older products may have a 12 digit number.</span>
                 </p>
                 <p class="govuk-body-s">
-                    You can also create a case for a product or add a product if it doesn't already exist<!-- within our records-->.
+                    You can also create a new product record in the Product Safety Database (<abbr>PSD</abbr>) to describe a product that isn’t already represented. 
                 </p>
             </div>
         </details>
     </div>
     <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
-        <a href="/product-case-testing/do-you-have-the-barcode" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-            Add a product
-        </a>
+        <div class="opss-text-align-right">
+            <a href="/product-case-testing/do-you-have-the-barcode" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Create a product record
+            </a>
+        </div>
     </div>
 </div>
 
