--- a/app/views/product-case-testing/success-product-added.html
+++ b/app/views/product-case-testing/success-product-added.html
@@ -1,7 +1,7 @@
 {% extends "layout-user-testing.html" %}
 
 {% block pageTitle %}
-    Success - the product record has been created
+    Select the default image
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,7 +13,7 @@
 
 
 {% block content %}
-<!--div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
   <h2 class="govuk-error-summary__title" id="error-summary-title">
     There is a problem
   </h2>
@@ -23,13 +23,13 @@
 
       <li>
 
-        <a href="#createcase">Select yes if you want to create a case for this product now</a>
+        <a href="#defaultimg">Select which image will be the default image</a>
 
       </li>
 
     </ul>
   </div>
-</div-->
+</div>
 
 <!--div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
     <div class="govuk-notification-banner__header">
@@ -50,7 +50,7 @@
 
         <form action="#" method="post" novalidate>
 
-<div class="govuk-form-group" data-test-for="radio" data-test-ele-name="createcase">
+<div class="govuk-form-group" data-test-for="radio" data-test-ele-name="defaultimg">
 
   <fieldset class="govuk-fieldset" aria-describedby="which-image-hint">
 
@@ -65,27 +65,42 @@
     The default image will be used as the product record's thumbnail image. 
   </div>  
 
-  <!--span id="createcase-error" class="govuk-error-message">
-    <span class="govuk-visually-hidden">Error:</span> Select yes if you want to add this product to your case
-  </span-->
+  <span id="defaultimg-error" class="govuk-error-message">
+    <span class="govuk-visually-hidden">Error:</span> Select which image will be the default image
+  </span>
 
-  <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1">
+  <style>
+.govuk-radios__item label {
+  float: left;
+}
+.imgsarea {
+  height: 60px;
+  margin-left: 30px; 
+  margin-top: -10px;
+  float: left;
+}
+.imgsarea img {
+  height: inherit !important;
+  width: auto; 
+}
+  </style>
 
+  <div class="govuk-radios govuk-!-padding-top-6 govuk-!-padding-bottom-1">
 
-        <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="createcase" name="createcase" type="radio" value="yes" disabled>
-          <label class="govuk-label govuk-radios__label" for="createcase">
-            Yes
-          </label>
-
+      <div class="govuk-radios__item govuk-!-margin-bottom-5">
+        <input class="govuk-radios__input" id="defaultimg" name="defaultimg" type="radio" value="yes">
+        <label class="govuk-label govuk-radios__label" for="defaultimg" id="theImg00">
+          <span id="imageTitle0"></span> &ndash; <span id="fileName0"></span>
+        </label>
+        <div class="imgsarea" id="imagearea0" aria-describedby="theImg00"></div><!-- put aria-describedby on the IMAGE in real HTML -->
       </div>
 
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="createcase-2" name="createcase" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="createcase-2">
-          No - return to the products page
-      </label>
-
+      <div class="govuk-radios__item govuk-!-margin-bottom-5">
+        <input class="govuk-radios__input" id="defaultimg-2" name="defaultimg" type="radio" value="no">
+        <label class="govuk-label govuk-radios__label" for="defaultimg-2" id="theImg01">
+          <span id="imageTitle1"></span> &ndash; <span id="fileName1"></span>
+        </label>
+        <div class="imgsarea" id="imagearea1" aria-describedby="theImg01"></div><!-- put aria-describedby on the IMAGE in real HTML -->
       </div>
   </div>
 
@@ -95,17 +110,9 @@
 
 </div>
 
-
-
-
-
-
-
-
 <button class="govuk-button" data-module="govuk-button">
   Continue
 </button>
-
 
       </form>
 
@@ -123,11 +130,46 @@
     {% endblock %}
   {% endblock %}
 
+
 <script>
   jQuery(document).ready(function(){
 
     setMenuState('products');
     validateTheForm($("#main-content").find('form'));
+
+    if((localStorage.getItem('theImageName0') === null) || (localStorage.getItem('theImageName1') === null)){ //if either are empty then there is only 1 image
+
+        window.location.replace("http://www.bbc.com/news");//xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+    }else{
+
+        if(localStorage.getItem('theImageName0') !== null){
+            var img0 = new Image();
+            img0.id = "img0";
+            img0.src = localStorage.theImage0;
+            img0.thename = localStorage.theImageName0;
+            img0.title = localStorage.theImageTitle0;
+            img0.desc = localStorage.theImageDesc0;
+            $('#imagearea0').html(img0);
+            $('#fileName0').text(img0.thename);
+            $('#imageTitle0').text(img0.title);
+
+
+        }
+        if(localStorage.getItem('theImageName1') !== null){
+            var img1 = new Image();
+            img1.id = "img1";
+            img1.src = localStorage.theImage1;
+            img1.thename = localStorage.theImageName1;
+            img1.title = localStorage.theImageTitle1;
+            img1.desc = localStorage.theImageDesc1;
+            $('#imagearea1').html(img1);
+            $('#fileName1').text(img1.thename);
+            $('#imageTitle1').text(img1.title);
+
+        }
+
+    }
 
   });
 </script>
