--- a/app/views/product-case-testing/what-is-the-product-name.html
+++ b/app/views/product-case-testing/what-is-the-product-name.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">What is the product name?</h1>
 
         <p class="govuk-body opss-secondary-text">
@@ -58,11 +58,11 @@
           Provide and categorise what information you can.
         </p>
 
-        <div class="govuk-warning-text govuk-!-margin-bottom-8">
+        <div class="govuk-warning-text govuk-!-margin-top-8 govuk-!-margin-bottom-8">
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            The &lsquo;full product name&rsquo; entry will be permanent and cannot be changed.
+            The 'full product name' entry will be permanent and cannot be changed after the product record has been created.
           </strong>
         </div>        
 
@@ -158,7 +158,7 @@
               <fieldset class="govuk-fieldset" aria-describedby="product-hint">
 
               <legend class="govuk-fieldset__legend">
-                Does the product have a specific product name?
+                Does the product have a specific product, or product brand, name?
               </legend>
 
 
@@ -292,7 +292,7 @@
     General product identifiers might include an <abbr title="Stock Keeping Unit">SKU</abbr>, eBay or <abbr title="Amazon Standard Identification Number">ASIN</abbr> (Amazon) number.
     <br class="opss-br-desktop">To add multipul number codes seperate each one from the next with a comma.
   </div>
-  <input class="govuk-input  govuk-input--width-10" id="identifyingnumber" name="identifyingnumber" type="text" aria-describedby="identifyingnumber-hint">
+  <input class="govuk-input  govuk-input--width-20" id="identifyingnumber" name="identifyingnumber" type="text" aria-describedby="identifyingnumber-hint">
 </div>
 
 
